sdk/v0.4/groq.mdx
---
title: "pixeltable.functions.groq"
sidebarTitle: "groq"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) that wrap various endpoints from the Groq API. In order to use them, you must first `pip install groq` and configure your Groq credentials, as described in the [Working with Groq](https://pixeltable.readme.io/docs/working-with-groq) tutorial.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.4/pixeltable/functions/groq.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `chat_completions()` <sub>udf</sub>

Chat Completion API.


Equivalent to the Groq `chat/completions` API endpoint. For additional details, see: [https://console.groq.com/docs/api-reference#chat-create](https://console.groq.com/docs/api-reference#chat-create)

Request throttling: Applies the rate limit set in the config (section `groq`, key `rate_limit`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install groq`


**Signature:**

```python
chat_completions(
    messages: Json,
    model: String,
    model_kwargs: Optional[Json],
    tools: Optional[Json],
    tool_choice: Optional[Json]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): A list of messages comprising the conversation so far.
- **`model`** (*String*): ID of the model to use. (See overview here: [https://console.groq.com/docs/models](https://console.groq.com/docs/models))
- **`model_kwargs`** (*Optional[Json]*): Additional keyword args for the Groq `chat/completions` API. For details on the available parameters, see: [https://console.groq.com/docs/api-reference#chat-create](https://console.groq.com/docs/api-reference#chat-create)

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `llama-3.1-8b-instant` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
messages = [{'role': 'user', 'content': tbl.prompt}]
tbl.add_computed_column(response=chat_completions(messages, model='llama-3.1-8b-instant'))
```


---

### `invoke_tools()` <sub>udf</sub>

Converts an OpenAI response dict to Pixeltable tool invocation format and calls `tools._invoke()`.


**Signature:**

```python
invoke_tools(
    tools: pixeltable.func.tools.Tools,
    response: pixeltable.exprs.expr.Expr
)-> pixeltable.exprs.inline_expr.InlineDict
```

